--- a/css/classes.css
+++ b/css/classes.css
@@ -31,7 +31,7 @@ the 'logo' in the navbar
 
 .ClassHeader{
 	margin-top: 20px;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	padding-top: 10px;
 	align-self: center;
 	text-align: center;
@@ -41,6 +41,22 @@ the 'logo' in the navbar
 
 #hpTitle{
   margin-bottom: 20px;
+}
+
+.card{
+  position: relative;
+  margin-top: 40px;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding-bottom: 10px;
+
+}
+
+.contianer{
+  position: relative;
+  margin-top: 100px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 
