Updated code so that the hamburger bar works in the nav bar, made everything work when screen is minimized, updated classes page and added a paragraph

--- a/css/classes.css
+++ b/css/classes.css
@@ -43,6 +43,14 @@ the 'logo' in the navbar
   margin-bottom: 20px;
 }
 
+.classesExplained{
+  margin-top: 5%;
+  margin-left: 25%;
+  margin-right: 25%;
+  text-align: center;
+
+}
+
 .card{
   position: relative;
   margin-top: 40px;
