--- a/css/admin.css
+++ b/css/admin.css
@@ -7,7 +7,8 @@
 
 */
 body{
-  background-image: url('');
+  background-image: url('background.jpg');
+  background-size: 150px;
 }
 
 /* Found this on stack overflow:
@@ -28,6 +29,10 @@ the 'logo' in the navbar
   color:white;
 }
 
+.navbar.navbar-expand-lg.navbar-light.bg-secondary{
+	opacity: 0.85
+}
+
 .adminHeader{
 	margin-top: 20px;
 	padding-bottom: 10px;
@@ -36,11 +41,13 @@ the 'logo' in the navbar
 	align-self: center;
 	text-align: center;
   	font-family: ariel;
-  	color: rgb(0,0,0,0.8);
+  	background-color: rgba(255,255,255,0.4);
 }
 
-#hpTitle{
+#adminH1{
   margin-bottom: 20px;
+  color: rgba(108,117,125, 1);
+  text-align: center;
 }
 
 .contianer{
@@ -49,6 +56,8 @@ the 'logo' in the navbar
   margin-bottom: 30px;
   margin-left: 5%;
   margin-right: 5%;
+  background-color: rgba(255,255,255,0.9);
+
 }
 
 .footer{
@@ -58,6 +67,6 @@ the 'logo' in the navbar
   text-align: center;
   align-self: center;
   width: 100%;
-  background-color: rgb(0,0,0, 0.45);
+  background-color: rgb(108,117,125, 0.85);
   color: white;
 }
