Restructure repo from static website to flask webapp

--- a/hello_world_pets_website/templates/classes.html
+++ b/hello_world_pets_website/templates/classes.html
@@ -22,7 +22,7 @@
 	<script src="https://kit.fontawesome.com/f84faeb5a9.js" crossorigin="anonymous"></script>
 
 	<!-- Including my own CSS-->
-	<link rel="stylesheet" type="text/css" href="css/classes.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/classes.css')}}">
 
 		<title>Hello World Pets! - Classes</title>
 
