--- a/hello_world_pets_website/templates/index.html
+++ b/hello_world_pets_website/templates/index.html
@@ -24,7 +24,7 @@
 	<script src="https://kit.fontawesome.com/f84faeb5a9.js" crossorigin="anonymous"></script>
 
 	<!-- Including my own CSS-->
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css')}}">
 
 		<title>Hello World Pets!</title>
 
@@ -85,7 +85,7 @@
 	<div class="container">
   		<div class="row">
     		<div class="col">
-    			<img id="catImg" src="images/home/cats.jpg" alt="cats" style="width:100%">
+    			<img id="catImg" src={{url_for('static', filename='images/home/cats.jpg')}} alt="cats" style="width:100%">
     		</div>
     	
     		<div class="col-6">
@@ -102,7 +102,7 @@
     			https://www.pexels.com/photo/orange-tabby-cat-beside-fawn-short-coated-puppy-46024/
     		-->
     		<div class="col">
-    			<img id="dogCatImg" src="images/home/dogCat.jpg" alt="dogCat" style="width:100%">
+                <img id="dogCatImg" src={{url_for('static', filename='images/home/dogCat.jpg')}} alt="dogCat" style="width:100%">
     		</div>
   		</div>
   		<div class="row">
