Remove duplicate Find Vets button

--- a/hello_world_pets_website/templates/vets.html
+++ b/hello_world_pets_website/templates/vets.html
@@ -105,7 +105,7 @@
   			</div>
 
   			<div>
-  				<input type="text" style="width: 400px;">				<button type="submit" class="btn btn-primary">Find Vets</button>
+                <input type="text" style="width: 400px;">
   				<button type="submit" class="btn btn-primary">Find Vets</button>
   			</div>
     	</fieldset>
