Fixed a spelling error in a table and a missing bracket error on the admin page

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -154,7 +154,7 @@
 			<td>{{p[4]}}</td>
 			<td>{{p[5]}}</td>
 			<td>{{p[6]}}</td>
-			<td>{{p[7}}</td>
+			<td>{{p[7]}}</td>
 			<td>
 				<button class="btn btn-info">Update</button>
 			</td>
@@ -264,7 +264,7 @@
 
 		</tbody>
 	</table>
-</di{v>
+</div>
 {% endif %}
 
 <!-- Table for Vets -->
