--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -77,7 +77,7 @@
   {% if rows is defined and rows|length %}
   <div class="contianer" style="width:90%">
 	<h5 class="card-title">Customers</h5>
-	<table class="table table-striped" style="width:100%">
+	<table id="customerTable" class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -115,9 +115,25 @@
 			{% endfor %}
 
 			<tr>
-				<td colspan="11">
-					<button class="btn btn-secondary">Add Customer</button>
-				</td>
+				<!-- This code is from: https://www.tutorialrepublic.com/faq/how-to-add-
+					remove-table-rows-dynamically-using-jquery.php-->
+				<!-- We need to add a form attribute in order to add new customers to the DB. We are 
+				also using JQUERY to make the Add Customer button reactive-->
+				<!--<td colspan="11">-->
+					<form>
+						<!-- ADD IN ROW FOR HIDDEN ID!!!-->
+						<td><input type="text" id="cust_id" hidden></td>
+						<td><input type="text" id="firstName" placeholder="First Name"></td>
+						<td><input type="text" id="lastName" placeholder="Last Name"></td>
+						<td><input type="text" id="email" placeholder="Email"></td>
+						<td><input type="text" id="phone" placehoder="Phone"></td>
+						<td><input type="text" id="address" placeholder="Address"></td>
+						<td><input type="text" id="city" placehodler="City"></td>
+						<td><input type="text" id="state" placeholder="State"></td>
+						<td><input type="text" id="zip" placeholder="Zip Code"></td>
+					</form>
+					<td><button id="customerButton" class="btn btn-secondary">Add Customer</button></td>
+				<!--</td>-->
 			</tr>
 		</tbody>
 	</table>
@@ -338,6 +354,34 @@
   			</div>
 		</div>
 	</div>
+
+	<!-- Code for adding customers with the click of Add Customer Button
+	From: https://stackoverflow.com/questions/19092894/adding-new-rows-to-table-on-clicking-button-in-jquery
+	Here we are itereating through the row and appending a new row when the Add Customer 
+	button is clicked.
+	-->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+	<script>
+
+		$("#customerButton").click(function () { 
+
+		$("#customerTable").each(function () {
+   
+		var tds = '<tr>';
+		jQuery.each($('tr:last td', this), function () {
+			tds += '<td>' + $(this).html() + '</td>';
+		});
+		tds += '</tr>';
+		if ($('tbody', this).length > 0) {
+			$('tbody', this).append(tds);
+		} else {
+			$(this).append(tds);
+		}
+	});
+	});
+
+	</script>
 
 
 </body>
