--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -145,7 +145,7 @@
    {% if pets is defined and pets|length %}
   <div class="contianer" style="width:90%">
 	<h5 class="card-title">Pets</h5>
-	<table class="table table-striped" style="width:100%">
+	<table id="petTable" class="table table-striped" style="width:100%">
 		<thead>
 			<tr>
 				<th scope="col">#</th>
@@ -181,9 +181,29 @@
 		{% endfor %}
 
 			<tr>
-				<td colspan="10">
-					<button class="btn btn-secondary">Add Pet</button>
-				</td>
+				<!--<td colspan="10">-->
+					<!-- This code is from: https://www.tutorialrepublic.com/faq/how-to-add-
+					remove-table-rows-dynamically-using-jquery.php-->
+				<!-- We need to add a form attribute in order to add new customers to the DB. We are 
+				also using JQUERY to make the Add Customer button reactive-->
+				<!--<td colspan="11">-->
+					<form>
+						<!-- ADD IN ROW FOR HIDDEN ID!!!-->
+						<td><input type="text" id="pet_id" hidden></td>
+						<td><input type="text" id="name" placeholder="Pet Name"></td>
+						<td><input type="text" id="species" placeholder="Species"></td>
+						<td><input type="text" id="breed" placeholder="breed"></td>
+						<td><input type="text" id="age" placehoder="Age"></td>
+						<td><input type="radio" name ="gender" id="male" value="male">
+							<label for="male">Male</label>
+							<input type="radio" name="gender" id="female" value="female">
+							<br>
+							<label for="female">Female</label></td>
+						<td><input type="text" id="vet_id" hidden></td>
+						<td><input type="text" id="customer_id" hidden></td>
+					</form>
+					<td><button id="petButton" class="btn btn-secondary">Add Pet</button></td>
+				<!--</td>-->
 			</tr>
 
 		</tbody>
