--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -120,17 +120,17 @@
 				<!-- We need to add a form attribute in order to add new customers to the DB. We are 
 				also using JQUERY to make the Add Customer button reactive-->
 				<!--<td colspan="11">-->
-					<form>
+					<form action="" method="post">
 						<!-- ADD IN ROW FOR HIDDEN ID!!!-->
-						<td><input type="number" id="cust_id" hidden></td>
-						<td><input type="text" id="firstName" placeholder="First Name"></td>
-						<td><input type="text" id="lastName" placeholder="Last Name"></td>
-						<td><input type="text" id="email" placeholder="Email"></td>
-						<td><input type="text" id="phone" placehoder="Phone"></td>
-						<td><input type="text" id="address" placeholder="Address"></td>
-						<td><input type="text" id="city" placehodler="City"></td>
-						<td><input type="text" id="state" placeholder="State"></td>
-						<td><input type="text" id="zip" placeholder="Zip Code"></td>
+						<td><input type="number"  name="addCustomer" id="cust_id" hidden></td>
+						<td><input type="text" name="addCustomer" id="customerFirstName" placeholder="First Name"></td>
+						<td><input type="text" name="addCustomer" id="customerLastName" placeholder="Last Name"></td>
+						<td><input type="text" name="addCustomer" id="customerEmail" placeholder="Email"></td>
+						<td><input type="text" name="addCustomer" id="customerPhone" placehoder="Phone"></td>
+						<td><input type="text" name="addCustomer" id="customerAddress" placeholder="Address"></td>
+						<td><input type="text" name="addCustomer" id="customerCity" placehodler="City"></td>
+						<td><input type="text" name="addCustomer" id="customerState" placeholder="State"></td>
+						<td><input type="text" name="addCustomer" id="customerZip" placeholder="Zip Code"></td>
 					</form>
 					<td><button id="customerButton" class="btn btn-secondary">Add Customer</button></td>
 				<!--</td>-->
@@ -264,7 +264,7 @@
 						<td><input type="text" id="className" placeholder="Class Name"></td>
 						<td><input type="text" id="description" placeholder="Class Description"></td>
 						<td><input type="date" id="day" placeholder="Day"></td>
-						<td><input type="datetime" id="time" placehoder="Time"></td>
+						<td><input type="datetime-local" id="time" placehoder="Time"></td>
 						<td><input type="number" id="price" value="Price"></td>
 						<td><input type="number" id="enrollments" value="Class Enrollments"></td>
 						<td><input type="number" id="seats" value="Class Seats"></td>
