--- a/hello_world_pets_website/templates/customers.html
+++ b/hello_world_pets_website/templates/customers.html
@@ -153,7 +153,7 @@
                                 </div>
 
                                 <div class="col-md-6 offset-md-4">
-                                  <button type="submit" class="btn btn-primary">
+                                  <button type="submit" class="btn btn-primary" name="action" value="addCustomer">
                                     Register
                                   </button>
                                 </div>
@@ -243,7 +243,7 @@
 
 
                                 <div class="col-md-4 offset-md-4">
-                                  <button type="submit" class="btn btn-primary">
+                                  <button type="submit" class="btn btn-primary" name="action" value="addPet">
                                     Add Pet
                                   </button>
                                 </div>
